# snow-run-python

./: .gitignore  README.md  SECURITY.md  USAGE.md  pyproject.toml  requirements.txt
.github/skills/servicenow-mcp/: SKILL.md
copilot-skills/servicenow-mcp/: SKILL.md
docs/superpowers/plans/: 2026-06-11-config-srp.md  2026-06-11-design-review-fixes.md  2026-06-11-field-origin.md  2026-06-11-output-format-enum-state-machine.md  2026-06-11-service-now-client-facade.md
docs/superpowers/specs/: 2026-06-11-config-srp-design.md  2026-06-11-design-review-design.md  2026-06-11-field-origin-design.md  2026-06-11-output-format-enum-state-machine-design.md  2026-06-11-readme-redesign-design.md  2026-06-11-service-now-client-facade-design.md
examples/: table_export_import.md
snow_cli/: __init__.py  audit.py  cli.py  client.py  commands.py  config.py  instance_manager.py  instance_repository.py  mcp_server.py  session.py
tests/: test_client.py  test_commands.py  test_instance_repository.py
